# qtPlayground

./: .gitignore  CMakeLists.txt  LICENSE
app/: CMakeLists.txt
app/src/: Main.cpp
cmake/: Utils.cmake
